--- a/src/css/header.css
+++ b/src/css/header.css
@@ -56,6 +56,7 @@
 
 .logo {
     display: flex;
+    align-items: flex-end;
     height: 48px;
     width: 200px;
 }
@@ -118,7 +119,7 @@
     width: 42px;
 }
 
-.text-wrapper {
+.text-wrapper-header {
     align-self: center;
     color: #ffffff;
     flex: 1;
@@ -173,6 +174,7 @@
     position: relative;
     white-space: nowrap;
     width: fit-content;
+    text-decoration: none;
 }
 
 .text-wrapper-5 {
@@ -189,7 +191,7 @@
     white-space: nowrap;
 }
 
-.wedding-party {
+a:hover {
     color: var(--mainthird);
     font-family: var(--body-texts-text-6-font-family);
     font-size: var(--body-texts-text-6-font-size);
