--- a/src/css/styleguide.css
+++ b/src/css/styleguide.css
@@ -18,11 +18,11 @@
     --body-texts-text-6-font-weight: 400;
     --body-texts-text-6-letter-spacing: 0px;
     --body-texts-text-6-line-height: 24px;
-    /* --color-text-subtext: rgba(154, 154, 154, 1);
+    --color-text-subtext: rgba(154, 154, 154, 1);
     --color-text-text: rgba(62, 62, 62, 1);
     --lineicon: rgba(204, 210, 227, 1);
     --main-medium: rgba(95, 95, 95, 1);
     --main-primary: rgba(235, 109, 32, 1);
     --main-white: rgba(255, 255, 255, 1);
-    --mainthird: rgba(235, 132, 38, 1); */
+    --mainthird: rgba(235, 132, 38, 1);
 }
