--- a/src/css/styleguide.css
+++ b/src/css/styleguide.css
@@ -18,6 +18,7 @@
     --body-texts-text-6-font-weight: 400;
     --body-texts-text-6-letter-spacing: 0px;
     --body-texts-text-6-line-height: 24px;
+    --body-texts-text-7-line-height: 36px;
     --color-text-subtext: rgba(154, 154, 154, 1);
     --color-text-text: rgba(62, 62, 62, 1);
     --lineicon: rgba(204, 210, 227, 1);
@@ -25,4 +26,5 @@
     --main-primary: rgba(235, 109, 32, 1);
     --main-white: rgba(255, 255, 255, 1);
     --mainthird: rgba(235, 132, 38, 1);
+    --color-light-grey: rgb(179, 180, 180);
 }
