--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,21 +1,176 @@
+.full-width {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.fit-content {
+  width: fit-content;
+}
+
+.pos-relative {
+  position: relative;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.center {
+  justify-content: center;
+  align-items: center;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+.block {
+  display: block;
+}
+
 .no-border-5-padding {
-    background: transparent;
-    border: none;
-    padding: 5px;
-    cursor: pointer;
+  border: none;
+  padding: 5px;
+}
+
+.gap-10px {
+  gap: 10px;
+}
+
+.margin-top-20px {
+  margin-top: 20px;
+}
+
+.margin-bottom-5px {
+  margin-bottom: 5px;
+}
+
+.margin-bottom-20px {
+  margin-bottom: 20px;
+}
+
+.margin-left-10px {
+  margin-left: 10px;
+}
+
+.margin-auto-left-right {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.margin-0 {
+  margin: 0;
 }
 
 .no-bg {
-    background: transparent;
+  background: transparent;
+}
+
+.no-border {
+  border: none;
 }
 
 .link:hover::after {
-    content: '';
-    position: absolute;
-    left: 20%;
-    right: 20%;
-    bottom: 0;
-    height: 5px;
-    background-color: var(--mainthird);
-    border-radius: 5px;
+  content: "";
+  position: absolute;
+  left: 20%;
+  right: 20%;
+  bottom: 0;
+  height: 5px;
+  background-color: var(--mainthird);
+  border-radius: 5px;
+}
+
+.simple-link {
+  font-family: var(--body-texts-text-1-font-family);
+  font-size: 14px;
+  color: var(--color-text-text);
+  text-decoration: none;
+}
+
+.simple-link:hover {
+  color: var(--mainthird);
+}
+
+.btn {
+  position: relative;
+  cursor: pointer;
+  font-size: 20px;
+  color: var(--color-text-text);
+}
+
+.form-title {
+  font-size: 28px;
+  font-weight: 700;
+  color: var(--main-primary);
+}
+
+.underlined {
+  border-bottom: 1px solid var(--main-medium);
+}
+
+.error {
+  color: rgb(195, 0, 0);
+  font-size: 16px;
+  margin: 2px 0 0 0;
+}
+
+.text-wrapper-2 {
+  color: #5e5e5e;
+  flex: 1;
+  font-family: var(--body-texts-text-1-font-family);
+  font-size: var(--body-texts-text-1-font-size);
+  font-style: var(--body-texts-text-1-font-style);
+  font-weight: var(--body-texts-text-1-font-weight);
+  letter-spacing: var(--body-texts-text-1-letter-spacing);
+  line-height: var(--body-texts-text-1-line-height);
+  position: relative;
+}
+
+.text-wrapper-3 {
+  color: var(--color-text-text);
+  font-family: var(--body-texts-text-2-font-family);
+  font-size: var(--body-texts-text-2-font-size);
+  font-style: var(--body-texts-text-2-font-style);
+  font-weight: var(--body-texts-text-2-font-weight);
+  letter-spacing: var(--body-texts-text-2-letter-spacing);
+  line-height: var(--body-texts-text-2-line-height);
+  margin-top: -1px;
+  position: relative;
+  white-space: nowrap;
+  width: fit-content;
+}
+
+.text-wrapper-4 {
+  color: var(--color-text-text);
+  font-family: var(--body-texts-text-6-font-family);
+  font-size: var(--body-texts-text-6-font-size);
+  font-style: var(--body-texts-text-6-font-style);
+  font-weight: var(--body-texts-text-6-font-weight);
+  letter-spacing: var(--body-texts-text-6-letter-spacing);
+  line-height: var(--body-texts-text-6-line-height);
+  margin-top: -1px;
+  position: relative;
+  white-space: nowrap;
+  width: fit-content;
+  text-decoration: none;
+}
+
+.text-wrapper-5 {
+  color: #ffffff;
+  font-family: var(--body-texts-text-1-font-family);
+  font-size: var(--body-texts-text-1-font-size);
+  font-style: var(--body-texts-text-1-font-style);
+  font-weight: var(--body-texts-text-1-font-weight);
+  left: 6px;
+  letter-spacing: var(--body-texts-text-1-letter-spacing);
+  line-height: var(--body-texts-text-1-line-height);
+  position: absolute;
+  top: 4px;
+  white-space: nowrap;
 }
