--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -2,10 +2,12 @@
     width: 100%;
     margin: 30px auto;
     max-width: 400px;
+    border: solid 1px var(--main-medium);
     padding: 20px;
     background-color: var(--color-light-grey);
     border-radius: 10px;
     min-inline-size: min-content;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
   }
 
   .register-input-field {
@@ -22,7 +24,7 @@
 
 .visibility-icon {
     position: absolute;
-    top: 28px;
+    top: 26px;
     right: 5px;
     width: 20px;
     height: 20px;
