--- a/src/components/UserDropdownMenu/UserDropdownMenu.css
+++ b/src/components/UserDropdownMenu/UserDropdownMenu.css
@@ -7,8 +7,9 @@
     flex-direction: column;
     align-items: center;
     background: linear-gradient(to bottom, var(--base-gray-background), var(--color-light-grey));
+    background-color: transparent;
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
-    top: 22px;
+    top: 100%;
     left: 0;
 }
