--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,7 +3,7 @@
   margin: 30px auto;
   max-width: 400px;
   border: solid 1px var(--main-medium);
-  padding: 20px;
+  padding: 30px 10px 0 10px;
   background-color: var(--color-light-grey);
   border-radius: 10px;
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
