--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -61,9 +61,9 @@
 }
 
 .google-user-icon {
-    height: 35px;
-    width: 35px;
-    border-radius: 50%;
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
 }
 
 .logo {
@@ -74,29 +74,35 @@
 }
 
 .shop-account {
+  width: fit-content;
+  display: flex;
   align-items: center;
   justify-content: space-between;
-  display: flex;
-  width: 10%;
-  gap: 24px;
-  padding-left: 20px;
+  border-radius: 5px 5px 0 0;
+  border-top: 1px solid #333;
+  border-left: 1px solid #333;
+  border-right: 1px solid #333;
+  margin-left: 20px;
+  background-color: var(--color-light-grey);
 }
 
 .account {
+  position: relative;
+  border-right: 1px solid #333;
+  border-top-right-radius: 5px;
+  padding: 8px 8px 4px 8px;
   align-items: center;
   display: inline-flex;
   flex: 0 0 auto;
-  gap: 8px;
-  position: relative;
+  gap: 3px;
 }
 
 .shopping {
+  padding: 8px 8px 4px 8px;
   align-items: center;
   display: inline-flex;
   flex: 0 0 auto;
   gap: 8px;
-  justify-content: center;
-  position: relative;
 }
 
 .header .hover {
