--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,13 +1,28 @@
 .login-form {
+  position: absolute;
+  top: 100%;
+  left: -1px;
+  z-index: 99;
+  min-width: 300px;
   width: 100%;
-  margin: 30px auto;
   max-width: 400px;
-  border: solid 1px var(--main-medium);
-  padding: 30px 10px 0 10px;
+  padding: 20px 10px 0 10px;
   background-color: var(--color-light-grey);
-  border-radius: 10px;
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-  min-inline-size: min-content;
+  border-radius: 0 5px 5px 5px;
+  border-left: 1px solid #333;
+  border-right: 1px solid #333;
+  border-bottom: 1px solid #333;
+  box-shadow: 5px 5px 0px 0px rgba(0, 0, 0, 0.2);
+}
+
+.login-form::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 211px;
+  transform: translateX(-50%);
+  width: 213px;
+  border-top: 1px solid #333;
 }
 
 .form-input-field {
