--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -18,6 +18,7 @@
     display: flex;
     justify-content: center;
     padding-bottom: 1rem;
+    width: auto;
 }
 
 .group-0 {
@@ -28,6 +29,7 @@
 }
 
 #root > div > div.footer > div > div.text-wrapper-4 {
+    display: flex;
     align-items: start;
 }
 
