--- a/src/components/MostPopular/MostPopular.css
+++ b/src/components/MostPopular/MostPopular.css
@@ -1,11 +1,11 @@
-.most-popular-container {
+.most-popular .most-popular-container {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
 }
 
-.product {
+.most-popular.product {
   width: 120px;
   margin: 10px;
   background-color: var(--base-gray-background);
@@ -37,7 +37,7 @@
   color: #000;
 }
 
-.most-popular-title {
+.most-popular .most-popular-title {
   font-family: var(--body-texts-text-1-font-family);
   font-size: 20px;
   color: var(--color-text-text);
