--- a/src/components/UserDropdownMenu/UserDropdownMenu.css
+++ b/src/components/UserDropdownMenu/UserDropdownMenu.css
@@ -8,21 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: var(--color-light-grey);
-  border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px;
-  border-bottom-left-radius: 5px;
-  border-left: 1px solid #333;
-  border-right: 1px solid #333;
-  border-bottom: 1px solid #333;
-}
-
-.user-dropdown::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 115px;
-  transform: translateX(-50%);
-  width: 26px;
-  border-top: 1px solid #333;
+  background: var(--form-backgroundcolor);
+  border-radius: 0 5px 5px 5px;
+  box-shadow: 7px 7px 10px 0px rgba(0, 0, 0, 0.2);
 }
