--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,9 +20,21 @@
   flex-direction: column;
 }
 
+.vertically-center {
+  align-items: center;
+}
+
+.horizontally-center {
+  justify-content: center;
+}
+
 .center {
   justify-content: center;
   align-items: center;
+}
+
+.vertical-flex-start {
+  align-items: flex-start;
 }
 
 .space-between {
@@ -50,8 +62,16 @@
   gap: 10px;
 }
 
+.gap-20px {
+  gap: 20px;
+}
+
 .margin-top-20px {
   margin-top: 20px;
+}
+
+.margin-top-30px {
+  margin-top: 30px;
 }
 
 .margin-bottom-5px {
@@ -95,6 +115,11 @@
   cursor: pointer;
 }
 
+.italic-bold {
+  font-style: italic;
+  font-weight: 600;
+}
+
 .link:hover::after {
   content: "";
   position: absolute;
@@ -120,7 +145,6 @@
 }
 
 .btn {
-  position: relative;
   margin: 20px auto 0 auto;
   cursor: pointer;
   font-size: 20px;
@@ -138,11 +162,36 @@
   box-shadow: #5e5e5e 0px 0px 5px;
 }
 
+.form {
+  width: 100%;
+  margin: 30px auto;
+  padding: 30px 20px 20px 20px;
+  background-color: var(--form-backgroundcolor);
+  border-radius: 3px;
+  min-inline-size: min-content;
+  max-width: 400px;
+  box-sizing: border-box;
+  box-shadow: 3px 3px 15px 5px rgba(0, 0, 0, 0.2);
+}
+
 .form-title {
   margin: 0;
-  font-size: 28px;
+  font-size: 34px;
   font-weight: 700;
   color: var(--main-primary);
+}
+
+.input-field {
+  border: 1px solid rgba(204, 210, 227, 1);
+  border-radius: 2px;
+  padding: 5px;
+  color: var(--color-text-text);
+}
+
+.input-label {
+  font-size: 16px;
+  font-style: italic;
+  margin-bottom: 2px;
 }
 
 .underlined {
