--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,3 @@
-
 .footer {
     display: flex;
     flex-direction: column;
@@ -18,7 +17,6 @@
     display: flex;
     justify-content: center;
     padding-bottom: 1rem;
-    width: auto;
 }
 
 .group-0 {
@@ -29,7 +27,6 @@
 }
 
 #root > div > div.footer > div > div.text-wrapper-4 {
-    display: flex;
     align-items: start;
 }
 
@@ -68,7 +65,7 @@
     display: flex;
     grid-row: 2/3;
     grid-column: 1/2;
-    align-items: end;
+    align-items: flex-end;
     gap: 10px;
 
 }
