--- a/src/components/SaleContainer/saleContainer.css
+++ b/src/components/SaleContainer/saleContainer.css
@@ -91,7 +91,7 @@
 
 .favorite {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     width: auto;
     height: auto;
     
