--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -1,4 +1,8 @@
-.checkoutTemplate {
+.checkout-template {
+  position: absolute;
+  z-index: 100;
+  top: 20px;
+  left: 50%;
   margin: 0 auto;
   padding: 30px 50px 20px 50px;
   background-color: var(--form-backgroundcolor);
@@ -7,6 +11,7 @@
   max-width: 400px;
   box-sizing: border-box;
   box-shadow: 3px 3px 15px 5px rgba(0, 0, 0, 0.2);
+  transform: translateX(-50%);
 }
 
 .checkout-btn {
