--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -1,4 +1,11 @@
 .content {
+    position: relative;
     width: 60vw;
     margin: 40px auto;
+}
+
+.display-bar {
+    position: absolute;
+    top: -180px;
+    left: -240px;
 }
