--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -78,14 +78,15 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-radius: 5px 5px 0 0;
+  border-top-right-radius: 10px;
   margin-left: 20px;
   background-color: var(--form-backgroundcolor);
 }
 
 .account {
   position: relative;
-  border-top-right-radius: 5px;
+  border-top-right-radius: 10px;
+  border-right: 1px solid rgba(0,0,0,0.1);
   padding: 8px 8px 4px 8px;
   align-items: center;
   display: inline-flex;
