--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,3 +1,11 @@
+.register-form {
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  z-index: 100;
+  transform: translateX(-50%);
+}
+
 .input-field {
   border: 1px solid rgba(204, 210, 227, 1);
   border-radius: 2px;
