--- a/src/components/MainPage/SaleContainer/saleContainer.css
+++ b/src/components/MainPage/SaleContainer/saleContainer.css
@@ -8,10 +8,10 @@
   margin-bottom: 1rem;
   gap: 0;
 }
-.product {
+.sale-container .product {
     display: block;
 	border: 0.1px #e2e2e2;
-    width: 14%;
+    /* width: 14%; */
 	border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	position: relative;
@@ -24,50 +24,50 @@
 }
 
 
-.product-img {
+.sale-container .product-img {
 	max-width: 100%;
 	max-height: 100%;
 	margin: auto;
 	transition: transform .4s ease-out;
 }
 
-.product:hover .product-img {
+.sale-container .product:hover .product-img {
 	transform: scale(1.05);
 }
 
-.manufacturer {
+.sale-container .manufacturer {
     
     color: #828282;
     font-size: 12px;
     margin: 5px 0 5px 0;
 }
 
-.country {
+.sale-container .country {
    
     color: #828282;
     font-size: 12px;
     margin: 5px 0 5px 0;
 }
 
-.price {
+.sale-container .price {
     display: flex;
     flex-direction: column-reverse;
     gap: 0.1rem;
     padding-left: 1rem;
     font-family: "Poppins-Regular", Helvetica;
-    font-size: xx-large;
+    font-size: x-large;
     font-weight: 600;
     min-width: 77px;
     
 }
 
-.old-price {
+.sale-container .old-price {
     text-decoration: line-through;
     color: #db1111;
     font-size: large;
 }
 
-.ofer {
+.sale-container .ofer {
     display: flex;
     justify-content: center;
     margin: 1rem 0 1rem 0;
@@ -76,7 +76,7 @@
     
 }
 
-.discount {
+.sale-container .discount {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -89,7 +89,7 @@
 
 }
 
-.favorite {
+.sale-container .favorite {
     display: flex;
     justify-content: flex-end;
     width: auto;
@@ -98,7 +98,7 @@
     padding: 0.5rem 0.5rem 0.5rem 0;
 }
 
-.favorite img {
+.sale-container .favorite img {
     width: 25px;
     height: 25px;
     margin-right:0;
@@ -115,6 +115,6 @@
    
 }
 
-.product a.no-inherit:hover  {
+.sale-container .product a.no-inherit:hover  {
     text-decoration: none;    
 }
