--- a/src/components/MostPopular/MostPopular.css
+++ b/src/components/MostPopular/MostPopular.css
@@ -15,6 +15,13 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+.product:hover {
+  box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  scale: 1.05;
 }
 
 .image-container {
