update on mostpopular css; new category component template -> ProductCard

--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -1,11 +1,11 @@
-.most-popular-container {
-  display: flex;
+.product-card-container {
   flex-wrap: wrap;
-  flex-direction: row;
   justify-content: center;
+  display: flex;
+  flex-direction: row;
 }
 
-.most-popular-product {
+.product {
   width: 120px;
   margin: 10px;
   min-height: 160px;
@@ -19,7 +19,7 @@
   flex-direction: column; /* Stack children vertically */
 }
 
-.most-popular-product:hover {
+.product:hover {
   box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
   transform: scale(1.05); /* Scale on hover */
 }
@@ -29,6 +29,7 @@
   height: auto;
   width: 100%;
 }
+
 .image {
   flex-grow: 1; /* Take up remaining vertical space */
   height: auto;
@@ -42,17 +43,6 @@
   font-family: var(--body-texts-text-1-font-family);
   font-size: 14px;
   color: var(--color-text-text);
-}
-
-.most-popular-title {
-  font-family: var(--body-texts-text-1-font-family);
-  font-size: 20px;
-  color: var(--color-text-text);
-  font-weight: 600;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: center;
 }
 
 .link-most-popular {
