make minor style changes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -88,7 +88,7 @@
   gap: 20px;
 }
 
-.margin-top-5x {
+.margin-top-5px {
   margin-top: 5px;
 }
 
@@ -284,7 +284,7 @@
 }
 
 .input-label {
-  font-size: 16px;
+  font-size: 18px;
   font-style: italic;
   margin-bottom: 2px;
 }
@@ -296,5 +296,9 @@
     max-width: 400px;
     border-radius: 3px;
     box-shadow: 7px 7px 14px 7px rgba(0, 0, 0, 0.2);
+  }
+
+  .input-label {
+    font-size: 22px;
   }
 }
