--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -1,32 +1,73 @@
 .checkout-template {
+  width: 100vw;
   position: absolute;
-  z-index: 100;
-  top: 150px;
-  left: 50%;
+  top: 0;
+  left: 0;
+  min-width: 300px;
   margin: 0 auto;
-  padding: 30px 50px 20px 50px;
+  padding: 20px;
   background-color: var(--form-backgroundcolor);
-  border-radius: 5px;
-  min-inline-size: min-content;
-  max-width: 400px;
   box-sizing: border-box;
-  box-shadow: 3px 3px 15px 5px rgba(0, 0, 0, 0.2);
-  transform: translateX(-50%);
+}
+
+.checkout-font {
+  font-size: 16px;
+  font-style: italic;
+  font-weight: 600;
 }
 
 .checkout-btn {
-    cursor: pointer;
-    font-size: 20px;
-    font-family: var(--body-texts-text-1-font-family);
-    color: var(--color-text-text);
-    border: 2px solid rgb(168, 181, 216);
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  font-size: 20px;
+  font-family: var(--body-texts-text-1-font-family);
+  color: var(--color-text-text);
+  border: 2px solid rgb(168, 181, 216);
+  border-radius: 5px;
+  background-color: var(--main-white);
+  padding: 8px;
+  transition: all 0.3s ease-in-out;
+}
+
+.checkout-btn:hover {
+  transform: scale(1.05);
+  box-shadow: #5e5e5e 0px 0px 5px;
+}
+
+.check-image {
+  width: 40px;
+  height: 40px;
+}
+
+.checkout-template-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 60px;
+  height: 60px;
+  color: rgb(135, 0, 0);
+  cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .checkout-template {
+    width: fit-content;
+    top: 20px;
+    left: 50%;
+    padding: 30px 50px 20px 50px;
+    transform: translateX(-50%);
     border-radius: 5px;
-    background-color: var(--main-white);
-    padding: 8px;
-    transition: all 0.3s ease-in-out;
+    box-shadow: 3px 3px 15px 5px rgba(0, 0, 0, 0.2);
   }
-  
-  .checkout-btn:hover {
-    transform: scale(1.05);
-    box-shadow: #5e5e5e 0px 0px 5px;
+
+  .checkout-font {
+    font-size: 24px;
   }
+
+  .check-image {
+    width: 50px;
+    height: 50px;
+  }
+}
