--- a/src/components/Checkout/Shipping/Shipping.css
+++ b/src/components/Checkout/Shipping/Shipping.css
@@ -1,9 +1,7 @@
 .shipping-form {
-  width: 100%;
-  margin: 30px auto;
-  padding: 30px 20px 20px 20px;
+  margin: 0 auto;
+  padding: 10px;
   background-color: var(--form-backgroundcolor);
-  border-radius: 1px;
   min-inline-size: min-content;
   max-width: 400px;
   box-sizing: border-box;
@@ -12,6 +10,7 @@
 
 .shipping-form-item {
   display: flex;
+  flex-direction: column;
   gap: 20px;
   margin-top: 20px;
   padding: 10px;
@@ -21,15 +20,26 @@
 
 .shipping-form-item-title {
   margin: 0;
-  font-size: 26px;
+  font-size: 32px;
   font-weight: 600;
   color: var(--color-text-text);
+}
+
+.label-input-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+.shipping-form-label {
+  font-size: 24px;
+  font-style: italic;
 }
 
 .shipping-input-field {
   border-radius: 2px;
   padding: 5px;
-  font-size: 14px;
+  font-size: 22px;
   color: var(--color-text-text);
 }
 
@@ -41,4 +51,23 @@
 .input-active {
   background: white;
   border: 1px solid rgba(204, 210, 227, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .shipping-form {
+    min-width: inline-fitcontent;
+    margin: 30px auto;
+    padding: 30px 20px 20px 20px;
+    border-radius: 1px;
+    box-shadow: 3px 3px 15px 5px rgba(0, 0, 0, 0.2);
+  }
+
+  .shipping-form-item {
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .address-item {
+    align-items: flex-start;
+  }
 }
