--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,37 +1,82 @@
 .register-form {
   position: absolute;
-  top: 150px;
-  left: 50%;
-  z-index: 100;
-  transform: translateX(-50%);
+  top: 0;
+  left: 0;
 }
 
-.input-field {
+.register-form-input-field {
+  width: 100%;
   border: 1px solid rgba(204, 210, 227, 1);
   border-radius: 2px;
+  margin-bottom: 10px;
+  font-size: 16px;
   padding: 5px;
   color: var(--color-text-text);
 }
 
 .visibility-icon {
   position: absolute;
-  top: 22px;
+  top: 50%;
   right: 7px;
   width: 25px;
   height: 25px;
+  transform: translateY(-50%);
 }
 
-.back-to-login {
-  position: relative;
-  margin: 0;
-  font-size: 12px;
-  padding-bottom: 5px;
-  background: transparent;
-  border: none;
-  color: var(--color-text-text);
-  cursor: pointer;
+.password-strength-meter {
+  display: flex;
+  width: 100%;
+  height: 8px;
+  border: 1px solid rgba(204, 210, 227, 1);
+}
+
+.password-strength-meter-portion {
+  width: 0;
+  height: 8px;
+  transition: width 0.5s ease-in-out;
+}
+
+.password-strength-meter-portion-disabled {
+  width: 0;
+}
+
+.password-strength-meter-portion-active {
+  width: 25%;
+}
+
+.password-strength-meter-red {
+  background: linear-gradient(to right, rgb(255, 0, 0), rgb(255, 100, 0));
+}
+
+.password-strength-meter-orange {
+  background: linear-gradient(to right, rgb(255, 100, 0), rgb(255, 255, 0));
+}
+
+.password-strength-meter-yellow {
+  background: linear-gradient(to right, rgb(255, 255, 0), rgb(100, 255, 0));
+}
+
+.password-strength-meter-green {
+  background: linear-gradient(to right, rgb(100, 255, 0), rgb(0, 255, 0));
 }
 
 #create-account-button {
   margin-top: 20px;
+}
+
+@media (min-width: 769px) {
+  .register-form {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .two-inputs-row {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .register-form-input-field {
+    width: -webkit-fill-available;
+    font-size: 22px;
+  }
 }
