--- a/src/components/Header/Login/Login.css
+++ b/src/components/Header/Login/Login.css
@@ -82,3 +82,39 @@
   font-size: 14px;
   background-color: #4f86ec;
 }
+
+.login-error {
+  width: fit-content;
+  margin: 5px auto;
+  font-size: 14px;
+  font-weight: 600;
+  color: rgb(200, 10, 10);
+  padding: 4px;
+  border-radius: 5px;
+  border: 1px solid rgb(200, 10, 10);
+  background-color: rgb(206, 164, 164);
+}
+
+.login-success {
+  position: absolute;
+  top: 10px;
+  right: -70px;
+  width: fit-content;
+  margin: 5px auto 0 auto;
+  font-size: 18px;
+  font-weight: 600;
+  color: rgba(0, 140, 0, 0.8);
+  padding: 4px;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 200, 0, 0.8);
+  background-color: rgba(146, 196, 146, 0.8);
+  animation: grow 0.5s ease-in-out;
+}
+
+.simple-link {
+  font-family: var(--body-texts-text-1-font-family);
+  font-size: 18px;
+  color: var(--color-text-text);
+  text-decoration: none;
+  cursor: pointer;
+}
