--- a/src/css/style.css
+++ b/src/css/style.css
@@ -92,7 +92,6 @@
   margin-top: 5px;
 }
 
-
 .margin-top-10px {
   margin-top: 10px;
 }
@@ -159,14 +158,6 @@
   font-weight: 600;
 }
 
-.simple-link {
-  font-family: var(--body-texts-text-1-font-family);
-  font-size: 14px;
-  color: var(--color-text-text);
-  text-decoration: none;
-  cursor: pointer;
-}
-
 .simple-link:hover {
   color: var(--mainthird);
 }
@@ -182,6 +173,12 @@
   background-color: var(--main-white);
   padding: 5px;
   transition: all 0.3s ease-in-out;
+}
+
+.btn:disabled {
+  background-color: #cccccc;
+  color: #666666;
+  cursor: not-allowed;
 }
 
 .btn:hover {
@@ -203,6 +200,19 @@
   border: 1px solid rgb(200, 10, 10);
   background-color: rgb(206, 164, 164);
   margin: 10px auto 10px auto;
+}
+
+.success {
+  width: fit-content;
+  margin: 10px auto 10px auto;
+  font-size: 20px;
+  font-weight: 600;
+  color: rgba(0, 140, 0, 0.8);
+  padding: 4px;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 200, 0, 0.8);
+  background-color: rgba(146, 196, 146, 0.8);
+  animation: grow 0.5s ease-in-out;
 }
 
 .text-wrapper-2 {
@@ -265,7 +275,7 @@
   margin: 0 auto;
   padding: 30px 20px 20px 20px;
   background-color: var(--form-backgroundcolor);
-  min-inline-size: min-content; 
+  min-inline-size: min-content;
   box-sizing: border-box;
 }
 
