--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -28,7 +28,7 @@
   width: 100%;
   height: 8px;
   border: 1px solid rgba(204, 210, 227, 1);
-}z
+}
 
 .password-strength-meter-portion {
   width: 0;
