--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -106,12 +106,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  top: -13px;
-  right: -13px;
-  width: 25px; 
-  height: 25px; 
+  top: -11px;
+  right: -1px;
+  width: 20px; 
+  height: 20px; 
   border-radius: 50%;
   background-color: var(--main-primary);
+  font-size: 16px;
 }
 
 @media screen and (max-width: 1173px) {
