--- a/src/components/MainPage/MenuMain/menuMain.css
+++ b/src/components/MainPage/MenuMain/menuMain.css
@@ -15,8 +15,7 @@
 
 .menu {
   display: flex;
-  width: 98%;
-  min-width: 900px;
+  width: clamp(900px, 100%, 1050px);
   /* background-color: rgb(236, 208, 173); */
   height: 350px;
   margin: 1rem 0 1rem 0;
@@ -187,4 +186,16 @@ a:active {
 .bottom-2 {
   flex: 6.5;
   background: url("../../../images/products/efficient-appliances.png");
+}
+
+@media screen and (max-width: 940px) {
+  .sale-container > div:nth-child(4) {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .sale-container > div:nth-child(3) {
+    display: none;
+  }
 }
