make minor style changes

--- a/src/css/styleguide.css
+++ b/src/css/styleguide.css
@@ -26,6 +26,7 @@
     --main-primary: rgba(235, 109, 32, 1);
     --main-white: rgba(255, 255, 255, 1);
     --mainthird: rgba(235, 132, 38, 1);
+    --color-white-grey: rgb(234, 234, 234);
     --color-light-grey: rgb(221, 221, 221);
     --color-medium-grey: rgb(222, 221, 221);
     --color-dark-grey: rgba(210, 208, 208);
