--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,14 +3,12 @@
   width: 100vw;
   display: flex;
   justify-content: center;
-  /* background-color: #120d59; */
   padding: 20px 0 20px 0;
   font-family: var(--body-texts-text-1-font-family);
 }
 
 .header-menu-container {
   display: flex;
-  /* flex-wrap: wrap; */
   justify-content: center;
   align-items: center;
   gap: 20px;
@@ -30,19 +28,17 @@
   border-radius: 50px;
 }
 
-.category-dropdown {
-  z-index: 1;
-  position: relative;
-  display: flex;
-  gap: 5px;
-  align-items: center;
-  background-color: var(--main-primary);
-  padding: 5px;
-  border-radius: 50px;
-  font-weight: 200;
+.hamburger-icon {
+  font-size: 20px;
+  cursor: pointer;
+
+  @media screen and (min-width: 800px) {
+    cursor: default;
+  }
 }
 
 .text-all-categories {
+  display: none;
   font-family: var(--body-texts-text-1-font-family);
   font-size: 18px;
   font-weight: 500;
@@ -64,6 +60,7 @@
 }
 
 .hamburger-menu {
+  position: relative;
   display: flex;
   align-items: center;
   padding: 10px;
@@ -108,8 +105,8 @@
   align-items: center;
   top: -11px;
   right: -1px;
-  width: 20px; 
-  height: 20px; 
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   background-color: var(--main-primary);
   font-size: 16px;
@@ -141,11 +138,7 @@
   .header-menu-container {
     display: flex;
     flex-direction: column;
-    gap: 3em;
-  }
-
-  .category-dropdown {
-    display: none;
+    gap: 20px;
   }
 
   .search-input {
@@ -159,8 +152,8 @@
   }
 
   .google-user-icon {
-   width: 50px;
-   height: 50px;
+    width: 50px;
+    height: 50px;
   }
 
   .header-icon {
@@ -182,8 +175,8 @@
   .shopping-cart-quantity {
     top: -13px;
     right: -13px;
-    width: 35px; 
-    height: 35px; 
+    width: 35px;
+    height: 35px;
   }
 }
 
@@ -193,17 +186,16 @@
   }
 }
 
-@media (min-width: 800px) {
+@media screen and (min-width: 800px) {
   .company-name {
     margin-top: 8px;
     margin-right: 20px;
     white-space: nowrap;
   }
 
-  .hamburger-menu {
-    display: none;
+  .text-all-categories {
+    display: block;
   }
-
   .user-nav-button {
     font-size: 24px;
   }
