--- a/src/components/MainPage/SaleContainer/saleContainer.css
+++ b/src/components/MainPage/SaleContainer/saleContainer.css
@@ -157,6 +157,8 @@
     
 }
 .sale-wrapper {
+    position: relative;
+    z-index: -1;
     display: flex;
     flex-direction: column;
     justify-content: center;
