--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,13 @@
   /* background-color: #120d59; */
   padding: 20px 0 20px 0;
   font-family: var(--body-texts-text-1-font-family);
+  
+}
+
+.header-container > button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 .header-menu-container {
