--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -10,6 +10,14 @@
   font-size: 20px;
   border-bottom-right-radius: 35px;
   border-bottom-left-radius: 35px;
+   
+}
+
+.navbar button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
 .navbar-link {
